# customer-churn-prediction

./: .gitignore  LICENSE  Makefile  README.md  metrics.json  pyproject.toml  requirements.txt
config/: settings.yaml  threshold.yaml
data/raw/: churn_sample.csv
notebooks/: 01_eda.ipynb
src/: __init__.py  features.py  schema.py  utils.py  viz_calibration.py
src/api/: app.py
src/core/: config.py
src/data/: dataset.py
src/ml/: evaluate.py  train.py
streamlit_app/: __init__.py  app.py
templates/: dashboard.html  index.html
tests/: __init__.py  test_api.py  test_features.py  test_train.py
